hydroflow/tests/compile-fail/surface_degenerate_tee.rs
use hydroflow::hydroflow_syntax;

fn main() {
    let mut df = hydroflow_syntax! {
        tee();
    };
    df.run_available();
}
